--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes" /> 
     <meta name="apple-touch-fullscreen" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="./css/animate.css">
     <link rel="stylesheet" href="./styles.css">
     <title>Blanchet House Pop-Up Info Kiosk</title>
   </head>
@@ -24,7 +23,7 @@
         </div>
         <div class="content gifts">
             <div class="tile">
-                <h2>Gifts and More</h2>
+                <h2>Gifts</h2>
             </div>
         </div>
     </div>
