simplifying structure and setting up for data-driving

--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
   </head>
   <body>
     <div class="main-menu">
-        <div class="content chair">
-            <div class="tile">
-                <h2>Adirondack Chair</h2>
-            </div>
+        <div class="tile chair" data-page="chair">
+            <h2>Adirondack Chair</h2>
         </div>
-        <div class="content bench">
-            <div class="tile">
-                <h2>Convertible Bench</h2>
-            </div>
+        <div class="tile bench" data-page="bench">
+            <h2>Convertible Bench</h2>
         </div>
-        <div class="content gifts">
-            <div class="tile">
-                <h2>Gifts</h2>
-            </div>
+        <div class="tile gifts" data-page="gifts">
+            <h2>Gifts</h2>
         </div>
+    </div>
+
+    <div class="text chair" data-page="chair">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quos tenetur, reprehenderit necessitatibus doloribus atque, iusto nemo sunt, voluptas incidunt libero ullam labore laboriosam ducimus molestiae accusamus placeat, itaque quaerat.</p>
+        <p>Perferendis corporis suscipit, numquam! Odit natus ducimus sint ea vero id dolores exercitationem fuga, possimus accusantium perferendis temporibus, doloremque reiciendis ex alias.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque provident, eius aperiam voluptate at impedit earum quos ab? At hic quae, doloribus quidem omnis aut illo nisi laborum officiis voluptatem.</p>
+        <p>Distinctio vero soluta excepturi velit, saepe officia, vitae asperiores reprehenderit dolorum beatae. Obcaecati numquam ad ipsum eveniet accusamus, reiciendis accusantium ab officiis!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error porro ipsum beatae assumenda, eius, distinctio iusto perspiciatis quam minima cum vitae ea. Ea harum accusantium perferendis, et facilis? Excepturi, non.</p>
     </div>
 
     <script src="./js/jquery-3.1.1.slim.min.js"></script>
