--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" /> 
-    <meta name="apple-touch-fullscreen" content="yes" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="./styles.css">
     <title>Blanchet House Pop-Up Info Kiosk</title>
   </head>
   <body>
-    <div class="main-menu">
-        <div class="tile" data-page="chair">
-            <h2>Adirondack Chair</h2>
+    <div class="container">
+        <div class="main-menu">
+            <div class="tile" data-page="chair">
+                <h2>Adirondack Chair</h2>
+            </div>
+            <div class="tile" data-page="bench">
+                <h2>Convertible Bench</h2>
+            </div>
+            <div class="tile" data-page="gifts">
+                <h2>Gifts</h2>
+            </div>
         </div>
         <div class="text" data-page="chair">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quos tenetur, reprehenderit necessitatibus doloribus atque, iusto nemo sunt, voluptas incidunt libero ullam labore laboriosam ducimus molestiae accusamus placeat, itaque quaerat.</p>
@@ -21,18 +27,12 @@
             <p>Distinctio vero soluta excepturi velit, saepe officia, vitae asperiores reprehenderit dolorum beatae. Obcaecati numquam ad ipsum eveniet accusamus, reiciendis accusantium ab officiis!</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error porro ipsum beatae assumenda, eius, distinctio iusto perspiciatis quam minima cum vitae ea. Ea harum accusantium perferendis, et facilis? Excepturi, non.</p>
         </div>
-        <div class="tile" data-page="bench">
-            <h2>Convertible Bench</h2>
-        </div>
         <div class="text" data-page="bench">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quos tenetur, reprehenderit necessitatibus doloribus atque, iusto nemo sunt, voluptas incidunt libero ullam labore laboriosam ducimus molestiae accusamus placeat, itaque quaerat.</p>
             <p>Perferendis corporis suscipit, numquam! Odit natus ducimus sint ea vero id dolores exercitationem fuga, possimus accusantium perferendis temporibus, doloremque reiciendis ex alias.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque provident, eius aperiam voluptate at impedit earum quos ab? At hic quae, doloribus quidem omnis aut illo nisi laborum officiis voluptatem.</p>
             <p>Distinctio vero soluta excepturi velit, saepe officia, vitae asperiores reprehenderit dolorum beatae. Obcaecati numquam ad ipsum eveniet accusamus, reiciendis accusantium ab officiis!</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error porro ipsum beatae assumenda, eius, distinctio iusto perspiciatis quam minima cum vitae ea. Ea harum accusantium perferendis, et facilis? Excepturi, non.</p>
-        </div>
-        <div class="tile" data-page="gifts">
-            <h2>Gifts</h2>
         </div>
         <div class="text" data-page="gifts">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quos tenetur, reprehenderit necessitatibus doloribus atque, iusto nemo sunt, voluptas incidunt libero ullam labore laboriosam ducimus molestiae accusamus placeat, itaque quaerat.</p>
@@ -43,6 +43,7 @@
         </div>
     </div>
 
+    <!-- <script src="http://192.168.1.55:1337/vorlon.js"></script> -->
     <script src="./js/jquery-3.1.1.slim.min.js"></script>
     <script src="./js/inobounce.js"></script>
     <script src="./script.js"></script>
