--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="tile" data-page="chair">
                 <h2>Adirondack Chair</h2>
             </div>
-            <div class="text" data-page="chair">
+            <div class="text out" data-page="chair">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quos tenetur, reprehenderit necessitatibus doloribus atque, iusto nemo sunt, voluptas incidunt libero ullam labore laboriosam ducimus molestiae accusamus placeat, itaque quaerat.</p>
                 <p>Perferendis corporis suscipit, numquam! Odit natus ducimus sint ea vero id dolores exercitationem fuga, possimus accusantium perferendis temporibus, doloremque reiciendis ex alias.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque provident, eius aperiam voluptate at impedit earum quos ab? At hic quae, doloribus quidem omnis aut illo nisi laborum officiis voluptatem.</p>
@@ -23,14 +23,14 @@
             <div class="tile" data-page="bench">
                 <h2>Convertible Bench</h2>
             </div>
-            <div class="text" data-page="bench">
+            <div class="text out" data-page="bench">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quos tenetur, reprehenderit necessitatibus doloribus atque, iusto nemo sunt, voluptas incidunt libero ullam labore laboriosam ducimus molestiae accusamus placeat, itaque quaerat.</p>
                 <p>Perferendis corporis suscipit, numquam! Odit natus ducimus sint ea vero id dolores exercitationem fuga, possimus accusantium perferendis temporibus, doloremque reiciendis ex alias.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque provident, eius aperiam voluptate at impedit earum quos ab? At hic quae, doloribus quidem omnis aut illo nisi laborum officiis voluptatem.</p>
                 <p>Distinctio vero soluta excepturi velit, saepe officia, vitae asperiores reprehenderit dolorum beatae. Obcaecati numquam ad ipsum eveniet accusamus, reiciendis accusantium ab officiis!</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error porro ipsum beatae assumenda, eius, distinctio iusto perspiciatis quam minima cum vitae ea. Ea harum accusantium perferendis, et facilis? Excepturi, non.</p>
             </div>
-            <div class="text" data-page="gifts">
+            <div class="text out" data-page="gifts">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quos tenetur, reprehenderit necessitatibus doloribus atque, iusto nemo sunt, voluptas incidunt libero ullam labore laboriosam ducimus molestiae accusamus placeat, itaque quaerat.</p>
                 <p>Perferendis corporis suscipit, numquam! Odit natus ducimus sint ea vero id dolores exercitationem fuga, possimus accusantium perferendis temporibus, doloremque reiciendis ex alias.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque provident, eius aperiam voluptate at impedit earum quos ab? At hic quae, doloribus quidem omnis aut illo nisi laborum officiis voluptatem.</p>
