Fastclick and all transitions
I'm not convinced the fastclick does much/anything but it's probably not hurting.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
         </div>
     </div>
 
-    <!-- <script src="http://192.168.1.55:1337/vorlon.js"></script> -->
+    <!-- <script src="http://192.168.1.55:1337/vorlon.js"></script> --> 
     <script src="./js/jquery-3.1.1.slim.min.js"></script>
     <script src="./js/inobounce.js"></script>
+    <script src="./js/fastclick.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
