--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="/cache.manifest">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" /> 
+    <link rel="apple-touch-icon" sizes="57x57" href="/rsc/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/rsc/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/rsc/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/rsc/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/rsc/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/rsc/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/rsc/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/rsc/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/rsc/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/rsc/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/rsc/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/rsc/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/rsc/icons/favicon-16x16.png">
+
     <link rel="stylesheet" href="./styles.css">
-    <title>Blanchet House Pop-Up Info Kiosk</title>
+    <title>Pop-Up Info Kiosk</title>
   </head>
   <body>
     <div class="container">
