hooked to square register

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                 <h2>Gifts</h2>
             </div>
         </div>
+        <a class="buy" href="square-register://">
+            <div>
+                Tap Here to Place an Order
+            </div>
+        </a>
     </div>
 
     <!-- <script src="http://192.168.1.55:1337/vorlon.js"></script> --> 
