Framework tentatively done! Let's fill 'er up with content....

--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
             <div class="tile" data-page="chair">
                 <h2>Adirondack Chair</h2>
             </div>
-            <div class="text out" data-page="chair">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea quos tenetur, reprehenderit necessitatibus doloribus atque, iusto nemo sunt, voluptas incidunt libero ullam labore laboriosam ducimus molestiae accusamus placeat, itaque quaerat.</p>
-                <p>Perferendis corporis suscipit, numquam! Odit natus ducimus sint ea vero id dolores exercitationem fuga, possimus accusantium perferendis temporibus, doloremque reiciendis ex alias.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque provident, eius aperiam voluptate at impedit earum quos ab? At hic quae, doloribus quidem omnis aut illo nisi laborum officiis voluptatem.</p>
-                <p>Distinctio vero soluta excepturi velit, saepe officia, vitae asperiores reprehenderit dolorum beatae. Obcaecati numquam ad ipsum eveniet accusamus, reiciendis accusantium ab officiis!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error porro ipsum beatae assumenda, eius, distinctio iusto perspiciatis quam minima cum vitae ea. Ea harum accusantium perferendis, et facilis? Excepturi, non.</p>
-            </div>
+            <div class="text out" data-page="chair"></div>
             <div class="tile" data-page="bench">
                 <h2>Convertible Bench</h2>
             </div>
@@ -64,7 +58,8 @@
     </div>
 
     <!-- <script src="http://192.168.1.55:1337/vorlon.js"></script> --> 
-    <script src="./js/jquery-3.1.1.slim.min.js"></script>
+    <script src="./js/jquery-3.1.1.min.js"></script>
+    <script src="./js/marked.min.js"></script>
     <script src="./js/inobounce.js"></script>
     <script src="./js/fastclick.js"></script>
     <script src="./script.js"></script>
