First set of markdown, stealing copy from handout

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div class="tile" data-page="chair">
                 <h2>Adirondack Chair</h2>
             </div>
-            <div class="text out" data-page="chair"></div>
+            <div class="text out" data-page="chair"><div class="text_container"></div></div>
             <div class="tile" data-page="bench">
                 <h2>Convertible Bench</h2>
             </div>
-            <div class="text out" data-page="bench"></div>
-            <div class="text out" data-page="gifts"></div>
+            <div class="text out" data-page="bench"><div class="text_container"></div></div>
+            <div class="text out" data-page="gifts"><div class="text_container"></div></div>
             <div class="tile" data-page="gifts">
                 <h2>Gifts</h2>
             </div>
