spit polish plus copy

--- a/index.html
+++ b/index.html
@@ -20,22 +20,30 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/rsc/icons/favicon-16x16.png">
 
     <link rel="stylesheet" href="./styles.css">
-    <title>Pop-Up Info Kiosk</title>
+    <title>Blanchet House</title>
   </head>
   <body>
     <div class="container">
         <div class="main-menu">
             <div class="tile" data-page="chair">
                 <h2>Adirondack Chair</h2>
+                <div class="back out"><span class="icon">&#xf0e2;</span>(go back)</div>
             </div>
             <div class="text out" data-page="chair"><div class="text_container"></div></div>
             <div class="tile" data-page="bench">
                 <h2>Convertible Bench</h2>
+                <div class="back out"><span class="icon">&#xf0e2;</span>(go back)</div>
             </div>
             <div class="text out" data-page="bench"><div class="text_container"></div></div>
             <div class="text out" data-page="gifts"><div class="text_container"></div></div>
             <div class="tile" data-page="gifts">
                 <h2>Gifts</h2>
+                <div class="back out"><span class="icon">&#xf0e2;</span>(go back)</div>
+            </div>
+            <div class="text out" data-page="about"><div class="text_container"></div></div>
+            <div class="tile" data-page="about">
+                <h2>About Us</h2>
+                <div class="back out"><span class="icon">&#xf0e2;</span>(go back)</div>
             </div>
         </div>
         <a class="buy" href="square-register://">
@@ -45,7 +53,6 @@
         </a>
     </div>
 
-    <!-- <script src="http://192.168.1.55:1337/vorlon.js"></script> --> 
     <script src="./js/jquery-3.1.1.min.js"></script>
     <script src="./js/marked.min.js"></script>
     <script src="./js/inobounce.js"></script>
